--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
 
     <!-- Área Ranking à esquerda -->
     <div class="area-ranking">
-      <h2>Progresso👑</h2>
-      <input id="nomeUsuario" type="text" placeholder="Seu nome" />
-      <button id="btnSalvar">Salvar Pontuação</button>
-
+   
       <!-- Botão de reset -->
       <button id="btnResetar">Resetar Progresso</button>
 
@@ -110,9 +107,10 @@
   </div>
 
   <audio id="musicaFundo" src="audios/stranger-things-124008.mp3" loop></audio>
+  <audio id="somClique" src="audios/gooey-squish-14820.mp3" preload="auto"></audio>
   
   <footer class="rodape">
-  <p>Versão 1.0.0 - Jogo Clicker do Pão</p>
+  <p>Versão 1.1.0 - Jogo Clicker do Pão</p>
   </footer>
 
 
