--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="google-adsense-account" content="ca-pub-1679795863226773">
   <title>Jogo Clicker do Pão</title>
   <link rel="stylesheet" href="style.css" />
 </head>
