--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en-US">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -111,7 +111,7 @@
   <audio id="somClique" src="audios/gooey-squish-14820.mp3" preload="auto"></audio>
   
   <footer class="rodape">
-  <p>Versão 1.1.0 - Jogo Clicker do Pão</p>
+  <p>Versão 1.2.0 - Jogo Clicker do Pão</p>
   </footer>
 
 
